# xopenimage

./: CMakeLists.txt  LICENSE.txt  build-info  build.h  error.c  error.h  fileformats.c  fileformats.h  gimage.c  gimage.h  options.c  options.h  usageHelp.c  usageHelp.h  version.h  xopenimage.1  xopenimage.c
X11_interface/: gdisplay.c  gdisplay.h
formats/: 000_notes_licenses.txt  001_bitmap_notes.txt  jpeg_fmt.c  jpeg_fmt.h  netpbm_fmt.c  netpbm_fmt.h  png_fmt.c  png_fmt.h  tiff_fmt.c  tiff_fmt.h  webp_fmt.c  webp_fmt.h  xbitmap_fmt.c  xbitmap_fmt.h
transforms/: bitdownscale.c  bitdownscale.h  colorspace.c  colorspace.h  downscale.c  downscale.h  gamma.c  gamma.h  rotate.c  rotate.h  zoom.c  zoom.h
